# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "louvain"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "louvain"
path = "modules/bin/louvain.rs"

[workspace]
members = ["modules/cli", "modules/application", "modules/domain"]

[dependencies]
# Workspace dependencies
louvain-cli = "0.0.0"

[patch.crates-io]
louvain-cli = { path = "modules/cli" }
louvain-application = { path = "modules/application" }
louvain-domain = { path = "modules/domain" }
